--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -7,25 +7,15 @@
     <input id="email" type="email" name="email" formControlName="email" />
   </div>
 
-  <div class="control-row">
+  <div class="control-row" formGroupName="passwords">
     <div class="control">
       <label for="password">Password</label>
-      <input
-        id="password"
-        type="password"
-        name="password"
-        formControlName="password"
-      />
+      <input id="password" type="password" name="password" formControlName="password" />
     </div>
 
     <div class="control">
       <label for="confirm-password">Confirm Password</label>
-      <input
-        id="confirm-password"
-        type="password"
-        name="confirm-password"
-        formControlName="confirmPassword"
-      />
+      <input id="confirm-password" type="password" name="confirm-password" formControlName="confirmPassword" />
     </div>
   </div>
 
@@ -35,32 +25,22 @@
     <div class="control-row">
       <div class="control">
         <label for="first-name">First Name</label>
-        <input
-          type="text"
-          id="first-name"
-          name="first-name"
-          formControlName="firstName"
-        />
+        <input type="text" id="first-name" name="first-name" formControlName="firstName" />
       </div>
 
       <div class="control">
         <label for="last-name">Last Name</label>
-        <input
-          type="text"
-          id="last-name"
-          name="last-name"
-          formControlName="lastName"
-        />
+        <input type="text" id="last-name" name="last-name" formControlName="lastName" />
       </div>
     </div>
 
-    <fieldset>
+    <fieldset formGroupName="address">
       <legend>Your Address</legend>
 
       <div class="control-row">
         <div class="control">
           <label for="street">Street</label>
-          <input type="text" id="street" name="street" formControlName="street"/>
+          <input type="text" id="street" name="street" formControlName="street" />
         </div>
 
         <div class="control">
@@ -77,7 +57,7 @@
 
         <div class="control">
           <label for="city">City</label>
-          <input type="text" id="city" name="city" formControlName="city"/>
+          <input type="text" id="city" name="city" formControlName="city" />
         </div>
       </div>
     </fieldset>
@@ -98,35 +78,20 @@
     </div>
   </div>
 
-  <fieldset>
+  <fieldset formArrayName="source">
     <legend>How did you find us?</legend>
     <div class="control">
-      <input
-        type="checkbox"
-        id="google"
-        name="acquisition"
-        value="google"
-      />
+      <input type="checkbox" id="google" name="acquisition" value="google" formControlName="0" />
       <label for="google">Google</label>
     </div>
 
     <div class="control">
-      <input
-        type="checkbox"
-        id="friend"
-        name="acquisition"
-        value="friend"
-      />
+      <input type="checkbox" id="friend" name="acquisition" value="friend" formControlName="1" />
       <label for="friend">Referred by friend</label>
     </div>
 
     <div class="control">
-      <input
-        type="checkbox"
-        id="other"
-        name="acquisition"
-        value="other"
-      />
+      <input type="checkbox" id="other" name="acquisition" value="other" formControlName="2" />
       <label for="other">Other</label>
     </div>
   </fieldset>
@@ -134,12 +99,7 @@
   <div class="control-row">
     <div class="control">
       <label for="terms-and-conditions">
-        <input
-          type="checkbox"
-          id="terms-and-conditions"
-          name="terms"
-          formControlName="agree"
-        />
+        <input type="checkbox" id="terms-and-conditions" name="terms" formControlName="agree" />
         I agree to the terms and conditions
       </label>
     </div>
@@ -149,4 +109,11 @@
     <button type="reset" class="button button-flat" (click)="onReset()">Reset</button>
     <button type="submit" class="button">Sign up</button>
   </p>
+
+  @if (form.invalid && form.touched){
+  <p class="control-error">
+    Invalid form - please check your input data.
+  </p>
+  }
+
 </form>
